metadata/objects/SAPOrders__x.object
<CustomObject>
    <description>SAP Orders called on demand from SAP</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SalesOrders</externalName>
    <fields>
        <fullName>Businesspartnerid__c</fullName>
        <description>Businesspartnerid</description>
        <externalDeveloperName>Businesspartnerid</externalDeveloperName>
        <label>Businesspartnerid</label>
        <length>128</length>
        <referenceTargetField>Account.External_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SalesOrders</relationshipLabel>
        <relationshipName>SalesOrders</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Companyname__c</fullName>
        <description>Companyname</description>
        <externalDeveloperName>Companyname</externalDeveloperName>
        <label>Companyname</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency</description>
        <externalDeveloperName>Currency</externalDeveloperName>
        <label>Currency</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Netsum__c</fullName>
        <description>Netsum</description>
        <externalDeveloperName>Netsum</externalDeveloperName>
        <label>Netsum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orderid__c</fullName>
        <description>Orderid</description>
        <externalDeveloperName>Orderid</externalDeveloperName>
        <label>Orderid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>Tax</description>
        <externalDeveloperName>Tax</externalDeveloperName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Totalsum__c</fullName>
        <description>Totalsum</description>
        <externalDeveloperName>Totalsum</externalDeveloperName>
        <label>Totalsum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SAP Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Businesspartnerid__c</columns>
        <columns>ExternalId</columns>
        <columns>DisplayUrl</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SAP Sales Orders</pluralLabel>
</CustomObject>